﻿
BrawlCrate - v0.13 Hotfix 2
Copyright © 2018 soopercool101, MarioDox
BrawlBox  © 2009 - 2018 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky

https://github.com/soopercool101/BrawlCrate
https://discord.gg/s7c8763

This program is provided as-is without any warranty, implied or otherwise.
By using this program, the end user agrees to take full responsibility
regarding its proper and lawful use. The authors/hosts/distributors cannot be 
held responsible for any damage resulting in the use of this program, nor can 
they be held accountable for the manner in which it is used.

 ===============================================
|************ BrawlCrate Change Log ************|
 ===============================================
 
 - BrawlCrate v0.13 Hotfix 2 - (10/18/2018)
 . Fix display bug for hex viewers on older versions of Windows
 . Improve byte selection when searching by annotations
 
 - BrawlCrate v0.13 Hotfix 1 - (10/18/2018)
 . Greatly improved save/load of module annotations to use less diskspace
 
 - BrawlCrate v0.13 - (10/18/2018)
 . Added "Custom Metal Generator", which allows usage of a custom texture
 . Added Module Annotation System
   - Modules can now be labelled in-editor and saved to or loaded from txt files
   - Includes default annotations for STGDONKEY Section[1] and [4], STGDXPSTADIUM Section[4], and STGTARGET Section [4]
 . Added default STDT documentation for the following vBrawl stages:
   - STGCRAYON
   - STGDOLPIC
   - STGDONKEY
   - STGDXGARDEN
   - STGDXGREENS
   - STGDXONETT
   - STGFAMICOM
   - STGGREENHILL
   - STGHALBERD
   - STGHOMERUN
   - STGMANSION
   - STGMARIOPAST
   - STGMETALGEAR
   - STGNORFAIR
   - STGPALUTENA
   - STGPICTCHAT
   - STGPLANKTON
   - STGSTADIUM
   - STGTENGAN
   - STGVILLAGE
 . Added JOJI Soundbank Expansion Calculator in-editor for RSAR files
 . Added 1 and 2 byte edit modes to the Section Editor